CSS: fix button padding & alignment

--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -47,7 +47,7 @@ a, a:visited {
 a.btn {
     text-transform: none;
     //border-radius: 10px;
-    padding: 12px 80px;
+    padding: 12px 5px;
     margin-right: 20px;
     margin-top: 30px;
     white-space: normal;
